Runtime Manager, add image_file param to fake_camera for dynamic_reconfigure test

--- a/ros/src/util/packages/runtime_manager/scripts/computing.yaml
+++ b/ros/src/util/packages/runtime_manager/scripts/computing.yaml
@@ -405,6 +405,14 @@ subs :
          cmd  : roslaunch waypoint_follower wf_simulator.launch
          param: wf_simulator
          
+  - name : Dynamic Reconfigure Test
+    desc : Dynamic Reconfigure Test desc sample
+    subs :
+    - name : fake_camera
+      desc : fake_camera desc sample
+      cmd  : rosrun fake_drivers fake_camera
+      param: fake_camera
+
 buttons:
   synchronization :
     desc: synchronization desc sample
@@ -1876,3 +1884,13 @@ params :
       cmd_param :
         dash      : ''
         delim     : ':='
+
+  - name  : fake_camera
+    vars  :
+    - name  : image_file
+      desc  : image file path
+      label : image file path
+      kind  : path
+      v     : ''
+      cmd_param :
+        delim : ''
