--- a/ros/src/util/packages/runtime_manager/scripts/computing.yaml
+++ b/ros/src/util/packages/runtime_manager/scripts/computing.yaml
@@ -1639,24 +1639,32 @@ params :
       min       : 0.0
       max       : 10.0
       v         : 1.0
+      dynamic_reconfig : resolution
+      node_name : /ndt_mapping
     - name      : step_size
       desc      : step_size desc sample
       label     : Step Size
       min       : 0.0
       max       : 1.0
       v         : 0.1
+      dynamic_reconfig : step_size
+      node_name : /ndt_mapping
     - name      : trans_eps
       desc      : trans_eps desc sample
       label     : Trans EPS
       min       : 0.0
       max       : 0.1
       v         : 0.01
+      dynamic_reconfig : trans_eps
+      node_name : /ndt_mapping
     - name      : leaf_size
       desc      : leaf_size desc sample
       label     : Leaf Size
       min       : 0.0
       max       : 10.0
       v         : 1.0
+      dynamic_reconfig : leaf_size
+      node_name : /ndt_mapping
     - name      : use_openmp
       desc      : use_openmp desc sample
       label     : Use OpenMP
